[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/player/aimer.png" type="Texture" id=1]
[ext_resource path="res://assets/img/player/body.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/img/ammo/bullet.png" type="Texture" id=4]
[ext_resource path="res://assets/img/hud/ammo_bar_grey.png" type="Texture" id=5]
[ext_resource path="res://assets/img/hud/ammo_bar_green.png" type="Texture" id=6]

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( -8.91904, 67.1902 )
texture = ExtResource( 2 )

[node name="Moveable" type="Node2D" parent="."]

[node name="Aimer" type="Sprite" parent="Moveable"]
position = Vector2( 44.5952, -2.37839 )
texture = ExtResource( 1 )

[node name="BulletSpawnPosition" type="Position2D" parent="Moveable"]
position = Vector2( 112.975, 0 )

[node name="BulletDraft" type="Sprite" parent="Moveable/BulletSpawnPosition"]
visible = false
position = Vector2( -0.595001, 0 )
texture = ExtResource( 4 )

[node name="AmmoBar" type="TextureProgress" parent="Moveable"]
margin_left = 44.0007
margin_top = -85.0284
margin_right = 88.0007
margin_bottom = -41.0284
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoBarTween" type="Tween" parent="Moveable"]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
